Fixing the bug of page title not getting displayed on desktop & on mobile - its at the very top (#190)
* Fixing the bug

* Fixing the bug

---------

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,11 +266,11 @@ body:not(.event) > main > div:nth-child(1) > div picture > img {
 
 main div.section.desktop.short {
     img {
-        position: absolute;
+        position: relative;
         width: 100%;
         height: 500px;
         object-fit: cover;
-        top: -100px;
+        top: -120px;
     }
 
     h3 {
@@ -304,9 +304,9 @@ main div.section.mobile.short {
     }
 
     h3 {
-        position: relative;
+        position: absolute;
         right: 0;
-        bottom: 150px;
+        bottom: 0;
         font: 700 44px 'Open Sans', sans-serif;
         color: #fff;
         line-height: 1;
@@ -368,6 +368,7 @@ main > div.mobile.with-background-image {
 
 main > div.section.mobile.with-background-image.short {
   height: 350px;
+  position: relative;
 }
 
 main > div.section.mobile.with-background-image.short img {
